kubernetes/templates/components/namespace-policies/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-namespace
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-namespace: "true"
  ingress:
    - fromEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-namespace
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-namespace: "true"
  egress:
    - toEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-namespace
spec:
  endpointSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchExpressions:
            - key: cnpg.io/cluster
              operator: Exists
